--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -5,15 +5,13 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta http-equiv="content-type" content="text/html;charset=UTF-8"/>
-    <title>WhatsApp & Telegram chat sorting and summary with AI</title>
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <title>Hulunote - WhatsApp & Telegram chat sorting and summary with AI</title>
     <link rel="stylesheet" href="/css/tachyons.min.css"/>
     <link rel="stylesheet" href="/css/animate.min.css"/>
     <link rel="stylesheet" href="/css/hulunote.css"/>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">Loading...</div>
     <script src="/hulunote/hulunote.js" type="text/javascript"></script>
   </body>
 </html>
